# cucumber

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  ERROR_HANDLING_IMPROVEMENTS.md  Getting_Started.html  Introduction.html  LICENSE-MIT  Makefile  README.md  Running_Against_A_Process.html  SECURITY.md  Test_Modules_Organization.html  WRITER_CONSOLIDATION_SUMMARY.md  build.rs  clippy_config  index.html  print.html  readme.cast  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: audit.yml  book.yml  ci.yml  continuous-integration-workflow.yml
book/: .gitignore  README.md  book.toml  ci-build.sh
book/_rendered/: 404.html  Getting_Started.html  Introduction.html  Running_Against_A_Process.html  Test_Modules_Organization.html  index.html  print.html  searchindex.js  searchindex.json
book/src/: Features.md  Getting_Started.md  Introduction.md  Multiple_Features.md  SUMMARY.md  Test_Modules_Organization.md  cli.md  introduction.md  quickstart.md
book/tests/: Cargo.toml
book/theme/: highlight.js
capture-runner/: Cargo.toml
capture-runner/src/: main.rs
codegen/: CHANGELOG.md  Cargo.toml  README.md
codegen/features/: doctests.feature
codegen/src/: attribute.rs  attribute_ext.rs  derive.rs  lib.rs  parameter.rs  world.rs  world_init.rs
codegen/tests/: example.rs  readme.rs  two_worlds.rs
codegen/tests/features/: doctests.feature  example.feature
current/: 404.html  Getting_Started.html  Test_Modules_Organization.html  cli.html  index.html  print.html  quickstart.html  searchindex.js  searchindex.json
current/architecture/: index.html  parser.html  runner.html  writer.html
current/output/: index.html  intellij.html  json.html  junit.html  multiple.html  terminal.html  tracing.html
current/writing/: asserting.html  background.html  capturing.html  data_tables.html  doc_strings.html  hooks.html  index.html  languages.html  modules.html  retries.html  rule.html  scenario_outline.html  tags.html
docs/adr/: 0001-modular-architecture.md  0002-observer-pattern-integration.md  0003-step-enum-struct-format.md  0004-event-driven-architecture.md  0005-retry-mechanism.md  0006-concurrent-execution-model.md  0007-world-lifecycle-management.md  0008-three-component-architecture.md  0009-async-trait-migration.md  0010-world-trait-unification.md  0011-writer-normalization.md  0012-writer-composition.md  0013-performance-optimizations.md  0014-libtest-integration.md  0015-stats-collection.md  0016-cli-trait-pattern.md  0017-fail-fast-mechanism.md  0018-panic-payload-extraction.md  0019-data-table-api.md  0020-rust-190-modernization.md  0021-background-execution-in-rules.md  README.md
examples/: table_direct.rs
expression/: CHANGELOG.md  Cargo.toml  README.md
expression/src/: ast.rs  combinator.rs  combinators.rs  expansion.rs  lib.rs  parse.rs
features/: test.feature
features/failing/: failing.feature  success.feature
features/integration/: step_variety.feature
main/: 404.html  Features.html  Getting_Started.html  Introduction.html  Running_Against_A_Process.html  Test_Modules_Organization.html  cli.html  index.html  introduction.html  print.html  quickstart.html  searchindex.js  searchindex.json  toc.html  toc.js
main/architecture/: index.html  parser.html  runner.html  writer.html
main/output/: index.html  intellij.html  json.html  junit.html  multiple.html  terminal.html  tracing.html
main/writing/: asserting.html  background.html  capturing.html  data_tables.html  doc_strings.html  hooks.html  index.html  languages.html  modules.html  retries.html  rule.html  scenario_outline.html  tags.html
skeptic/: Cargo.toml
skeptic/src/: lib.rs  rt.rs  tests.rs
src/: book.rs  cli.rs  clippy_config.rs  codegen.rs  collection.rs  criteria.rs  cucumber.rs  cucumber_ext.rs  data_table.rs  error.rs  error_backup.rs  event.rs  examples.rs  exports.rs  expression.rs  expressions.rs  feature.rs  features.rs  future.rs  hashable_regex.rs  lib.rs  macros.rs  main.rs  observer.rs  output.rs  panic_trap.rs  prelude.rs  private.rs  regex.rs  runner.rs  step.rs  steps.rs  tag.rs  test_utils.rs  tracing.rs  vec_drain_filter.rs  world.rs
src/cli/: colored.rs  compose.rs  mod.rs  opts.rs
src/cucumber/: cli.rs  clone_impl.rs  core.rs  defaults.rs  execution.rs  fail_on_skipped.rs  hooks.rs  mod.rs  parser.rs  repeat.rs  runner.rs  steps.rs
src/error/: config.rs  core.rs  mod.rs  step.rs  utilities.rs  world.rs  writer.rs
src/event/: cucumber_events.rs  event_struct.rs  feature_events.rs  hook_events.rs  mod.rs  retries.rs  rule_events.rs  scenario_events.rs  source.rs  step_events.rs
src/output/: debug.rs  default.rs  junit.rs  mod.rs
src/parser/: basic.rs  mod.rs
src/runner/: basic.rs  basic.rs.backup  mod.rs  tracing.rs
src/step/: collection.rs  context.rs  error.rs  location.rs  mod.rs  regex.rs  table.rs
src/steps/: builder.rs  collection.rs  mod.rs
src/tracing/: collector.rs  cucumber_ext.rs  formatter.rs  layer.rs  mod.rs  scenario_id_ext.rs  types.rs  visitor.rs  waiter.rs  writer.rs
src/writer/: REFACTORING_SUMMARY.md  arbitrary_discard.rs  basic.rs  cargo_json.rs  cases.rs  common.rs  discard.rs  ext.rs  fail_on_skipped.rs  failure_discard.rs  join.rs  json.rs  junit.rs  libtest.rs  mod.rs  normalize.rs  normalize.rs.backup  normalized.rs  or.rs  out.rs  repeat.rs  (+7 more)
tests/: .feature  after_hook.rs  cli.rs  cucumber.rs  cucumber_builder.rs  data_table_test.rs  direct_table_test.rs  event_tests.rs  example.rs  fail_fast.rs  filter.rs  from_str.rs  from_str_and_parameter.rs  integration_test.rs  json.rs  junit.rs  libtest.rs  outline.feature  output.rs  result.rs  result_from_run.rs  retry.rs  retry_fail_fast.rs  retry_fail_on_skipped.rs  runner_basic_retry_options_tests.rs  table_direct_simple.rs  tracing.rs  wait.rs  writer_consolidation.rs  writer_consolidation_simple.rs  writer_discard_tests.rs  writer_edge_cases.rs  writer_integration_tests.rs  writer_mod_ext_tests.rs  writer_mod_tests.rs  writer_output_formatter_tests.rs  writer_stats_edge_cases.rs
(+263 files in other folders)
