[package]
name = "cucumber"
version = "0.11.3"
edition = "2021"
rust-version = "1.57"
description = """\
    Cucumber testing framework for Rust, with async support. \
    Fully native, no external test runners or dependencies.\
    """
license = "MIT OR Apache-2.0"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/cucumber"
homepage = "https://github.com/cucumber-rs/cucumber"
repository = "https://github.com/cucumber-rs/cucumber"
readme = "README.md"
categories = ["asynchronous", "development-tools::testing"]
keywords = ["cucumber", "testing", "bdd", "atdd", "async"]
include = ["/src/", "/tests/json.rs", "/tests/junit.rs", "/tests/wait.rs", "/LICENSE-*", "/README.md", "/CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["macros"]
# Enables step attributes and auto-wiring.
macros = ["cucumber-codegen", "cucumber-expressions", "inventory"]
# Enables support for outputting in Cucumber JSON format.
output-json = ["Inflector", "serde", "serde_json", "timestamps"]
# Enables support for outputting JUnit XML report.
output-junit = ["junit-report", "timestamps"]
# Enables timestamps collecting for all events.
timestamps = []

[dependencies]
async-trait = "0.1.40"
atty = "0.2.14"
clap = { version = "3.0", features = ["derive"] }
console = "0.15"
derive_more = { version = "0.99.17", features = ["as_ref", "deref", "deref_mut", "display", "error", "from", "into"], default_features = false }
either = "1.6"
futures = "0.3.17"
gherkin = { git = "https://github.com/cucumber-rs/gherkin", branch = "fix-line-number" }
globwalk = "0.8.1"
itertools = "0.10"
linked-hash-map = "0.5.3"
once_cell = { version = "1.8", features = ["parking_lot"] }
regex = "1.5"
sealed = "0.4"

# "macros" feature dependencies.
cucumber-codegen = { version = "0.11", path = "./codegen", optional = true }
cucumber-expressions = { version = "0.1", features = ["into-regex"], optional = true }
inventory = { version = "0.2", optional = true }

# "output-json" feature dependencies.
serde = { version = "1.0.103", features = ["derive"], optional = true }
serde_json = { version = "1.0.18", optional = true }
Inflector = { version = "0.11", default-features = false, optional = true }

# "output-junit" feature dependencies.
junit-report = { version = "0.7", optional = true }

[dev-dependencies]
derive_more = "0.99.17"
humantime = "2.1"
tempfile = "3.2"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "json"
required-features = ["output-json"]
harness = false

[[test]]
name = "junit"
required-features = ["output-junit"]
harness = false

[[test]]
name = "wait"
harness = false

[workspace]
members = ["codegen"]
exclude = ["book/tests"]
