[package]
name = "cucumber-codegen"
version = "0.10.0" # should be the same as main crate version
edition = "2018"
resolver = "2"
description = "Code generation for `cucumber` crate."
license = "MIT OR Apache-2.0"
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/cucumber-codegen"
homepage = "https://github.com/cucumber-rs/cucumber/tree/main/codegen"
repository = "https://github.com/cucumber-rs/cucumber"
readme = "README.md"
categories = ["asynchronous", "development-tools::testing"]
keywords = ["cucumber", "codegen", "macros"]

[lib]
proc-macro = true

[dependencies]
inflections = "1.1"
itertools = "0.10"
proc-macro2 = "1.0.28"
quote = "1.0.9"
regex = "1.4"
syn = { version = "1.0.74", features = ["derive", "extra-traits", "full"] }

[dev-dependencies]
async-trait = "0.1"
cucumber = { path = "..", features = ["macros"] }
futures = "0.3"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "example"
path = "tests/example.rs"
harness = false
