[package]
name = "cucumber-expression"
version = "0.11.0-dev" # should be the same as main crate version
edition = "2021"
rust-version = "1.56"
description = "Cucumber expression parser."
license = "MIT OR Apache-2.0"
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/cucumber-expression"
homepage = "https://github.com/cucumber-rs/cucumber/tree/main/expression"
repository = "https://github.com/cucumber-rs/cucumber"
readme = "README.md"
categories = ["development-tools::testing", "parser-implementations"]
keywords = ["cucumber", "codegen", "macros"]
exclude = ["/tests/"]

[dependencies]
derive_more = { version = "0.99.16", features = ["as_ref", "deref", "deref_mut", "display", "error"], default_features = false }
either = "1.6.1"
nom = "7.0"
nom_locate = "4.0"
regex = "1.5.4"
