[package]
description = "Test your Rust markdown documentation via Cargo"
license = "MIT/Apache-2.0"
name = "skeptic"
version = "0.13.7"
readme = "../README.md"
repository = "https://github.com/budziq/rust-skeptic"
homepage = "https://github.com/budziq/rust-skeptic"
documentation = "https://docs.rs/skeptic"
keywords = ["markdown", "documentation", "testing"]
categories = ["development-tools", "development-tools::testing"]
edition = "2018"

[dependencies]
bytecount = "0.6"
cargo_metadata = "0.14"
error-chain = { version = "0.12", default-features = false }
glob = "0.3"
pulldown-cmark = { version = "0.9", default-features = false }
tempfile = "3"
walkdir = "2.2"

[dev-dependencies]
unindent = "0.1"
