[package]
name = "cucumber-book-tests"
version = "0.0.0"
edition = "2021"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
publish = false

[dependencies]
async-trait = "0.1"
clap = { version = "3.0", features = ["derive"] }
cucumber = { version = "0.12", path = "../..", features = ["output-json", "output-junit"] }
futures = "0.3"
humantime = "2.1"
once_cell = { version = "1.8", features = ["parking_lot"] }
skeptic = { path = "../../skeptic" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.32"
windows_x86_64_msvc = "0.32"
windows-sys = "0.32"

[build-dependencies]
skeptic = { path = "../../skeptic" }
