[package]
name = "cucumber-book-tests"
version = "0.0.0"
edition = "2021"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
publish = false

[dependencies]
async-trait = "0.1"
clap = { version = "3.0", features = ["derive"] }
cucumber = { version = "0.14.0-dev", path = "../..", features = ["output-json", "output-junit"] }
futures = "0.3"
humantime = "2.1"
once_cell = "1.8"
skeptic = "0.13.7"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
skeptic = "0.13.7"
