[package]
name = "cucumber-book-tests"
version = "0.0.0"
edition = "2021"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
publish = false

[dependencies]
async-trait = "0.1"
clap = { version = "4.0.6", features = ["derive"] }
cucumber = { path = "../..", features = ["libtest", "output-json", "output-junit"] }
futures = "0.3"
humantime = "2.1"
once_cell = "1.8"
rand = "0.8"
skeptic = "0.13.7"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
skeptic = "0.13.7"
